Review comments and new integration tests